--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,7 @@
 
 <h1>Welcome!</h1>
 
+# posts form input to /greet url
 <form action="/greet" method="POST">
   <label for="user_name">Name:</label>
 
